Questions UI setup

--- a/index.html
+++ b/index.html
@@ -26,7 +26,29 @@
         <div class="col-12 mainContent">
             <div class="col-12 navbar">
                 <span>CBT</span><sub>By Ijoni victor</sub>
-                <span id="timerSpan">1 : 1 : 0</span>
+                <span id="timerSpan">0 : 0 : 0</span>
+            </div>
+            <div class="col-12 content">
+                <div class="col-3">
+                    <div>
+                        <div>
+                            <img  height="150"/>
+                        </div>
+                        <p>Name: <span id="userName"></span</p>
+                        <p>Email: <span id="emailName"></span</p> 
+                        <p>Phone number: <span id="phoneNumber"></span</p>
+                    </div>
+                </div>
+                <div class="col-9">
+                    <div>
+                        <div id="questionDiv">
+                        </div>
+                        <div id="optionDiv">
+                        </div>
+                        <div id="questionsButton">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <script src="Js/Shared/app.js"></script>
