--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <div>
                 <span>Enter cbt link</span><br>
                 <p class="col-12">
-                    <input type="text" class="cbtLinkInput" placeholder="Enter cbt link" /><span class="cbtLinkSpan"><button >Go</button></span>
+                    <input id="cbtLink" type="text" class="cbtLinkInput" placeholder="Enter cbt link" /><span class="cbtLinkSpan"><button onclick="callApi()">Go</button></span>
                 </p>
                 <p class="col-12 orParagraph">
                     <span></span>
@@ -59,6 +59,7 @@
                 <span class="close" onclick="closeModal()">&times;</span>
                 <div id="instructions"></div>
             </div>
+            <div class="loader2 loader"></div>
         </div>
         <script src="Js/Shared/app.js"></script>
     </body>
