Exam marking added

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8" />
         <link href="Images/iconImage.png" rel="shortcut icon" type="image/x-icon" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
         <link rel="stylesheet" type="text/css" href="Css/shared/site.css">
@@ -37,7 +38,9 @@
                         <p>Name: <span id="userName"></span</p>
                         <p>Email: <span id="emailName"></span</p> 
                         <p>Phone number: <span id="phoneNumber"></span</p><br>
-                        <a class="instructionLink" onclick="showInstruction()">View instructions</a>
+                        <a class="instructionLink" onclick="showInstruction()">View instructions</a><br>
+                        <p class="total"></p>
+                        <p class="pSubmit"><button onclick="promptUser()">Submit</button></p>
                     </div>
                 </div>
                 <div class="col-9">
